--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #202142;
-  color: #fff;
+  /* background-color: #202142; */
+  color: black;
   line-height: 1.6;
 }
 
